@@ -3,7 +3,7 @@
 -dontskipnonpubliclibraryclasses
 -dontpreverify
 -verbose
--optimizations !code/simplification/arithmetic,!field/*,!class/merging/*
+-optimizations !code/simplification/arithmetic,!field/*,!class/merging/*,!code/allocation/variable
 
 -keep public class * extends android.app.Activity
 -keep public class * extends android.app.Application
@@ -37,4 +37,10 @@
 
 -keep class * implements android.os.Parcelable {
   public static final android.os.Parcelable$Creator *;
+}
+
+-keepattributes *Annotation*
+
+-keepclassmembers class * extends com.actionbarsherlock.ActionBarSherlock {
+   <init>(android.app.Activity, int);
 }
