@@ -9,8 +9,11 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../../opt/android-sdk-linux_86/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.2=../../ActionBarSherlock/actionbarsherlock
-android.library.reference.3=../../android-menudrawer/menudrawer
-android.library.reference.4=../../StandOut/library
-android.library.reference.5=../../ShowcaseView/library
+proguard.config=proguard.cfg
+android.library.reference.1=../../ActionBarSherlock/actionbarsherlock
+android.library.reference.2=../../android-menudrawer/menudrawer
+android.library.reference.3=../../StandOut/library
+
+# TUTORIAL
+# android.library.reference.4=../../../opt/android-sdk-linux_86/extras/google/google_play_services/libproject/google-play-services_lib
+# android.library.reference.5=../../ShowcaseView/library
