@@ -257,7 +257,7 @@
 
     <!-- Strings for the ShowcaseView tutorial. -->
     <string name="tutorial_1_title">qavan! (I salute you!)</string>
-    <string name="tutorial_1_msg">This tutorial gives a brief overview of boQwI\'.\n\n* Latest changes *\n2014-04-08: Added request translation feature, tutorial.</string>
+    <string name="tutorial_1_msg">This tutorial gives a brief overview of boQwI\'.\n\n* Latest changes *\n2014-04-10: ...</string>
     <string name="tutorial_2_title">Search</string>
     <string name="tutorial_2_msg">Use this to search the database. You can search using Klingon or English.</string>
     <string name="tutorial_3_title">Resources</string>
