@@ -3,6 +3,7 @@
 <PreferenceScreen
         xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- TUTORIAL
     <PreferenceCategory
             android:title="@string/tutorial_preferences">
         <CheckBoxPreference
@@ -11,6 +12,7 @@
                 android:summary="@string/run_tutorial_preference_summary"
                 android:defaultValue="true" />
     </PreferenceCategory>
+    -->
 
     <PreferenceCategory
             android:title="@string/language_preferences">
